--- a/style/dictionary.css
+++ b/style/dictionary.css
@@ -2,7 +2,7 @@
  * ./style/dictionary.css
  * Stylesheet for interactive dictionary
  * for: <https://github.com/lduran2/js-jquery-dictionary>
- * date: 2018-11-04 T12:45
+ * date: 2018-11-04 T13:12
  * by: Leomar Durán <https://github.com/lduran2>
  */
 @charset 'utf-8';
@@ -57,6 +57,10 @@ dt, dd {
 
 .display-definitions {
 	position: relative;
+}
+
+.display-definitions dt {
+	cursor: pointer;
 }
 
 .selected + dd {
